--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -14,10 +14,33 @@ body {
     
     .container {
         color: #fff;
+        header {
+            background-image: linear-gradient(to right, #ff7f00, #ffca28);
+            h1 {
+                text-align: center;
+                font-family: Arial, sans-serif;
+                font-size: 36px;
+                text-transform: uppercase;
+                letter-spacing: 2px;
+                position: relative;
+                text-shadow: 1px 1px 0px #000, -1px -1px 0px #000, 1px -1px 0px #000, -1px 1px 0px #000;
+            }
+            h1::after {
+                content: attr(data-text);
+                position: absolute;
+                top: -0.3em;
+                left: 0;
+                color: #fff;
+                text-shadow: none;
+                background-color: #000;
+                transform: skew(-20deg);
+            }
+        }
         nav {
             display: flex;
             justify-content: space-between;
             position: fixed;
+            z-index: 999;
             width: 100vw;
             border-bottom: 2px solid ;
             height: 50px;
@@ -63,6 +86,9 @@ body {
                     color: #fff;
                     mix-blend-mode: #fff;
                     font-family: sans-serif;
+                    label {
+                        cursor: pointer;
+                    }
                 }
                 .Create {
                     font-family: sans-serif;
@@ -76,6 +102,52 @@ body {
             }
         }
         
+    }
+    main {
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+        margin-top: 280px;
+        h2 {
+            text-shadow: 1px 1px 0px #000, -1px -1px 0px #000, 1px -1px 0px #000, -1px 1px 0px #000;
+            font-size: 30px;
+            text-align: center;
+            width: 60%;
+        }
+        aside {
+            width: 40%;
+            width: 300px;
+      margin: 0 auto;
+      padding: 20px;
+      border: 1px solid #ccc;
+      background-color: #f9f9f9;
+      border-radius: 5px;
+      h2 {
+        text-align: center;
+      }
+      form input[type="login"],
+      form input[type="password"] {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 10px;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+    }
+        form input[type="submit"]{
+            width: 100%;
+      padding: 10px;
+      background-color: #336699;
+      color: #fff;
+      font-weight: bold;
+      border: none;
+      cursor: pointer;
+      border-radius: 3px;
+        }
+        form input[type="submit"]:hover {
+            background-color: #264d73;
+        }
+      
+        }
     }
     }
 }
